fix: TopUp Token on mobile :hover, Gas Tank

--- a/src/components/Wallet/Gas/RightPanel/TopUp/Token/Token.module.scss
+++ b/src/components/Wallet/Gas/RightPanel/TopUp/Token/Token.module.scss
@@ -117,7 +117,7 @@
     }
 
     &:hover {
-      .actions {
+      .actions:not(.disabled) {
         width: 100%;
       }
     }
